--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<h1> ui doi oi dam ba hecku vha </h2>
+<h1> ui doi oi dam ba hecku vha heck pay google dich</h2>
+
+
 
 <script>alert("xss via haker pro vha")</script>
+<script>alert("but ;(( domain is"+document.domain)</script>
